Nopeat muokkaukset ulkoasun yhtenäistämiseksi

--- a/templates/mathMenu3rdGrade.html
+++ b/templates/mathMenu3rdGrade.html
@@ -87,8 +87,8 @@
         <div class="dropdown">
           <button class="game-button dropbtn">Kello</button>
           <div class="dropdown-content">
-            <a href="{{ url_for('peli', pelin_id=17) }}">Paljon kello on?</a>
-            <a href="{{ url_for('peli', pelin_id=18) }}">Kuinka paljon aikaa on kulunut?</a>
+            <a href="{{ url_for('peli', pelin_id=17) }}">Kellopeli 1</a>
+            <a href="{{ url_for('peli', pelin_id=18) }}">Kellopeli 2</a>
           </div>
         </div>
       </div>
