--- a/templates/mathMenu4rdGrade.html
+++ b/templates/mathMenu4rdGrade.html
@@ -54,13 +54,13 @@
           <button class="game-button">Jakolaskut</button>
         </a>
         <a href="{{ url_for('peli', pelin_id=21) }}">
-          <button class="game-button">Pluslaskut isoilla luvuilla</button>
+          <button class="game-button">Yhteenlaskut</button>
         </a>
         <a href="{{ url_for('peli', pelin_id=22) }}">
-          <button class="game-button">Miinuslaskut isoilla luvuilla</button>
+          <button class="game-button">Miinuslaskut</button>
         </a>
         <a href="{{ url_for('peli', pelin_id=23) }}">
-          <button class="game-button">Paljonko maksaa</button>
+          <button class="game-button">Raha</button>
         </a>
       </div>
     </section>
