--- a/templates/mathMenu5rdGrade.html
+++ b/templates/mathMenu5rdGrade.html
@@ -55,10 +55,10 @@
           <button class="game-button">Jakolaskut desimaaliluvuilla</button>
         </a>
         <a href="{{ url_for('peli', pelin_id=26) }}">
-          <button class="game-button">Kertolaskut isoilla luvuilla</button>
+          <button class="game-button">Yhteenlaskut</button>
         </a>
         <a href="{{ url_for('peli', pelin_id=27) }}">
-          <button class="game-button">Jakolaskut isoilla luvuilla</button>
+          <button class="game-button">Miinuslaskut</button>
         </a>
         <a href="{{ url_for('peli', pelin_id=28) }}">
           <button class="game-button">Murtolukujen yhteen- ja vähennyslaskuja</button>
