--- a/templates/mathMenu6rdGrade.html
+++ b/templates/mathMenu6rdGrade.html
@@ -52,13 +52,13 @@
           <button class="game-button">Laskujärjestys</button>
         </a>
         <a href="{{ url_for('peli', pelin_id=32) }}">
-          <button class="game-button">Desimaalilukujen yhteen- ja vähennyslaskut </button>
+          <button class="game-button">Desimaaliluvut</button>
         </a>
         <a href="{{ url_for('peli', pelin_id=33) }}">
-          <button class="game-button">Jakolaskut murtoluvuilla</button>
+          <button class="game-button">Murtolukujen jako</button>
         </a>
         <a href="{{ url_for('peli', pelin_id=34) }}">
-          <button class="game-button">Prosenttilaskuja sovellettuna </button>
+          <button class="game-button">Prosenttilaskut</button>
         </a>
         <a href="{{ url_for('peli', pelin_id=35) }}">
           <button class="game-button">Pinta-ala</button>
