--- a/templates/profilePictureSelection.html
+++ b/templates/profilePictureSelection.html
@@ -8,13 +8,12 @@
 </head>
 <body>
 <!-- Headerin sisältö (eka osio sivusta) -->
-<!-- Headerin sisältö (eka osio sivusta) -->
 <header class="header-section">
   <div class="header-top">
     <img class="site-title" src="{{ url_for('static', filename='Kuvat/logoWhite.png') }}" alt="Logo valkoinen">
     <div class="avatar-dropdown">
       <button class="icon-button" aria-label="Menu">
-        <img loading="lazy" src="{{ user_avatar_url }}" class="icon-image" alt="Avatar" />
+        <img loading="lazy" src="{{ user_avatar_url }}" class="icon-image" alt="Avatar" style="width: 100%; height: 100%; border-radius: 50%;" />
       </button>
       <div class="dropdown-content">
         <a href="{{ url_for('student_info') }}">Profiili</a>
