--- a/templates/mathMenu5rdGrade.html
+++ b/templates/mathMenu5rdGrade.html
@@ -52,7 +52,7 @@
           <button class="game-button">Laskujärjestys</button>
         </a>
         <a href="{{ url_for('peli', pelin_id=25) }}">
-          <button class="game-button">Jakolaskut desimaaliluvuilla</button>
+          <button class="game-button">Desimaalijakolaskut</button>
         </a>
         <a href="{{ url_for('peli', pelin_id=26) }}">
           <button class="game-button">Yhteenlaskut</button>
@@ -61,13 +61,13 @@
           <button class="game-button">Miinuslaskut</button>
         </a>
         <a href="{{ url_for('peli', pelin_id=28) }}">
-          <button class="game-button">Murtolukujen yhteen- ja vähennyslaskuja</button>
+          <button class="game-button">Murtoluvut</button>
         </a>
         <a href="{{ url_for('peli', pelin_id=29) }}">
           <button class="game-button">Prosenttilaskuja</button>
         </a>
         <a href="{{ url_for('peli', pelin_id=30) }}">
-          <button class="game-button">Rahat ja hinnat</button>
+          <button class="game-button">Raha</button>
         </a>
       </div>
     </section>
